samples/04/redis-master-service.yml
apiVersion: v1
kind: Service
metadata:
  name: master
  labels:
    name: master
spec:
  ports:
  # the port that this service should serve on
  - port: 6379
    targetPort: 6379
  selector:
    name: master
