samples/04/redis-slave-service.yml
apiVersion: v1
kind: Service
metadata:
  name: slave
  labels:
    name: slave
spec:
  ports:
  # the port that this service should serve on
  - port: 6379
    targetPort: 6379
  selector:
    name: slave
